# Learn-It-All-rl-mujuco

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
dog_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: best.onnx
playground/common/: export_onnx.py  onnx_infer.py  randomize.py  rewards.py  rewards_numpy.py  runner.py
playground/dog_m/: base.py  constants.py  imu_axis_probe.py  joystick.py  mujoco_infer.py  mujoco_infer_base.py  runner.py
playground/dog_m/xmls/: config.json  dog.xml  scene_flat_terrain.xml  sensors.xml
playground/dog_m/xmls/assets/: FL_calf.STL  FL_foot.STL  FL_hip.STL  FL_thigh.STL  FR_calf.STL  FR_foot.STL  FR_hip.STL  FR_thigh.STL  RL_calf.STL  RL_foot.STL  RL_hip.STL  RL_thigh.STL  RR_calf.STL  RR_foot.STL  RR_hip.STL  RR_thigh.STL  trunk.STL
