[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dog-playground"
version = "0.1.0"
description = "MuJoCo + JAX dog locomotion playground with training, ONNX export, and inference tools."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Ma Zhenxuan"},
]
dependencies = [
  "absl-py==2.4.0",
  "brax==0.14.2",
  "etils==1.14.0",
  "flax==0.12.6",
  "framesviewer==1.1.0",
  "jax==0.9.2",
  "jax-cuda12-pjrt==0.9.2",
  "jax-cuda12-plugin==0.9.2",
  "jaxlib==0.9.2",
  "jaxtyping==0.3.9",
  "lxml==6.0.2",
  "matplotlib==3.10.8",
  "mediapy==1.2.6",
  "ml-collections==1.1.0",
  "mujoco==3.6.0",
  "mujoco-mjx==3.6.0",
  "numpy==2.4.4",
  "onnx==1.21.0",
  "onnxruntime==1.24.4",
  "playground==0.0.5",
  "pygame==2.6.1",
  "scipy==1.17.1",
  "tensorboard==2.20.0",
  "tensorboardX==2.6.4",
  "tensorflow==2.21.0",
  "tf2onnx==1.17.0",
  "tqdm==4.67.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["playground", "playground.*"]

[tool.setuptools.package-data]
"playground.dog_m" = [
  "xmls/*.json",
  "xmls/*.xml",
  "xmls/assets/*",
]
